# docs/swagger.yaml
@@ -15,6 +15,13 @@ definitions:
     required:
     - id
     type: object
+  avito.CustomDate:
+    properties:
+      date:
+        type: string
+    required:
+    - date
+    type: object
   avito.Segment:
     properties:
       name:
@@ -48,6 +55,44 @@ info:
   version: "1.0"
 paths:
   /segment:
+    delete:
+      consumes:
+      - application/json
+      description: delete segment by name
+      operationId: delete-segment
+      parameters:
+      - description: segment name
+        in: body
+        name: input
+        required: true
+        schema:
+          $ref: '#/definitions/avito.Segment'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            type: integer
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/handler.errorResponse'
+        "404":
+          description: Not Found
+          schema:
+            $ref: '#/definitions/handler.errorResponse'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/handler.errorResponse'
+        default:
+          description: ""
+          schema:
+            $ref: '#/definitions/handler.errorResponse'
+      summary: DeleteSegment
+      tags:
+      - segment
     post:
       consumes:
       - application/json
@@ -84,38 +129,6 @@ paths:
           schema:
             $ref: '#/definitions/handler.errorResponse'
       summary: CreateSegment
-      tags:
-      - segment
-  /segment/:id:
-    delete:
-      consumes:
-      - application/json
-      description: delete segment by name
-      operationId: delete-segment
-      produces:
-      - application/json
-      responses:
-        "200":
-          description: OK
-          schema:
-            type: integer
-        "400":
-          description: Bad Request
-          schema:
-            $ref: '#/definitions/handler.errorResponse'
-        "404":
-          description: Not Found
-          schema:
-            $ref: '#/definitions/handler.errorResponse'
-        "500":
-          description: Internal Server Error
-          schema:
-            $ref: '#/definitions/handler.errorResponse'
-        default:
-          description: ""
-          schema:
-            $ref: '#/definitions/handler.errorResponse'
-      summary: DeleteSegment
       tags:
       - segment
   /user:
@@ -157,12 +170,18 @@ paths:
       summary: CreateUser
       tags:
       - user
-  /user/:id:
+  /user/{id}:
     delete:
       consumes:
       - application/json
       description: delete user by id
       operationId: delete-user
+      parameters:
+      - description: the UUID of a user
+        in: path
+        name: id
+        required: true
+        type: string
       produces:
       - application/json
       responses:
@@ -228,12 +247,18 @@ paths:
       summary: UpdateUserSegments
       tags:
       - user_segments
-  /users-segments/:id:
+  /users-segments/{id}:
     get:
       consumes:
       - application/json
       description: get user's segments
       operationId: get-user-segments
+      parameters:
+      - description: the UUID of a user
+        in: path
+        name: id
+        required: true
+        type: string
       produces:
       - application/json
       responses:
@@ -258,6 +283,45 @@ paths:
           schema:
             $ref: '#/definitions/handler.errorResponse'
       summary: GetUserSegments
+      tags:
+      - user_segments
+  /users-segments/logs:
+    post:
+      consumes:
+      - application/json
+      description: get user's segments logs
+      operationId: get-user-segments-logs
+      parameters:
+      - description: year and month
+        in: body
+        name: input
+        required: true
+        schema:
+          $ref: '#/definitions/avito.CustomDate'
+      produces:
+      - text/csv
+      responses:
+        "200":
+          description: OK
+          schema:
+            type: integer
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/handler.errorResponse'
+        "404":
+          description: Not Found
+          schema:
+            $ref: '#/definitions/handler.errorResponse'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/handler.errorResponse'
+        default:
+          description: ""
+          schema:
+            $ref: '#/definitions/handler.errorResponse'
+      summary: GetUserSegmentsLogs
       tags:
       - user_segments
 swagger: "2.0"
